--- a/LocalDisasterPreventionInformationApp/Pages/Setting/MyPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Setting/MyPage.xaml
@@ -7,6 +7,7 @@
 
     <base:BasePage>
         <base:BasePage.InnerContent>
+
             <Grid x:Name="Inner">
 
                 <ScrollView>
@@ -14,13 +15,13 @@
 
                         <!-- 編集ボタン -->
                         <HorizontalStackLayout HorizontalOptions="End">
-                            <Button Text="編集"
+                            <Button Text="{Binding Btn_Edit}"
                                     FontSize="20"
                                     Padding="16,8"
                                     BackgroundColor="#2196F3"
                                     TextColor="White"
                                     CornerRadius="12"
-                                    Command="{Binding EditProfileCommand}" 
+                                    Command="{Binding EditProfileCommand}"
                                     Clicked="OnEditButtonClick"/>
                         </HorizontalStackLayout>
 
@@ -30,9 +31,8 @@
                               RowDefinitions="Auto,20,Auto,20,Auto,20,Auto,20,Auto,20">
 
                             <!-- フリガナ -->
-                            <!-- 後で変更→Text="{Binding Furigana}"　フリガナを入れるときに半角スペースを頭に入れてほしい -->
                             <Label Grid.Row="0" Grid.Column="2"
-                                   Text="フリガナ後で変更"
+                                   Text="{Binding Reg_Furigana}"
                                    FontSize="18"
                                    TextColor="#666"
                                    Margin="0,0,0,-20"
@@ -40,82 +40,76 @@
 
                             <!-- 氏名 -->
                             <Label Grid.Row="2" Grid.Column="0"
-                                   Text="氏名"
+                                   Text="{Binding Reg_Name}"
                                    FontSize="22"
                                    FontAttributes="Bold"
-                                   TextColor="#333" 
+                                   TextColor="#333"
                                    HorizontalOptions="Center"/>
 
                             <Label Grid.Row="2" Grid.Column="1"
                                    Text=" ： "
                                    FontSize="22"
                                    FontAttributes="Bold"
-                                   TextColor="#333" />
+                                   TextColor="#333"/>
 
                             <Label Grid.Row="2" Grid.Column="2"
                                    Text="{Binding UserName}"
                                    FontSize="26"
-                                   TextColor="#000" />
+                                   TextColor="#000"/>
 
-                            <!-- 下線 -->
                             <BoxView Grid.Row="3" Grid.ColumnSpan="3"
                                      HeightRequest="2"
-                                     BackgroundColor="#bbb" />
-
+                                     BackgroundColor="#bbb"/>
 
                             <!-- メールアドレス -->
                             <Label Grid.Row="4" Grid.Column="0"
-                                   Text="メールアドレス"
+                                   Text="{Binding Reg_Email}"
                                    FontSize="22"
                                    FontAttributes="Bold"
-                                   TextColor="#333" 
+                                   TextColor="#333"
                                    HorizontalOptions="Center"/>
 
                             <Label Grid.Row="4" Grid.Column="1"
                                    Text=" ： "
                                    FontSize="22"
                                    FontAttributes="Bold"
-                                   TextColor="#333" />
+                                   TextColor="#333"/>
 
                             <Label Grid.Row="4" Grid.Column="2"
                                    Text="{Binding Email}"
                                    FontSize="26"
-                                   TextColor="#000" />
+                                   TextColor="#000"/>
 
-                            <!-- 下線 -->
                             <BoxView Grid.Row="5" Grid.ColumnSpan="3"
                                      HeightRequest="2"
-                                     BackgroundColor="#bbb" />
-
+                                     BackgroundColor="#bbb"/>
 
                             <!-- 電話番号 -->
                             <Label Grid.Row="6" Grid.Column="0"
-                                   Text="電話番号"
+                                   Text="{Binding Reg_Phone}"
                                    FontSize="22"
                                    FontAttributes="Bold"
-                                   TextColor="#333" 
+                                   TextColor="#333"
                                    HorizontalOptions="Center"/>
 
                             <Label Grid.Row="6" Grid.Column="1"
                                    Text=" ： "
                                    FontSize="22"
                                    FontAttributes="Bold"
-                                   TextColor="#333" />
+                                   TextColor="#333"/>
 
                             <Label Grid.Row="6" Grid.Column="2"
                                    Text="{Binding Phone}"
                                    FontSize="26"
-                                   TextColor="#000" />
+                                   TextColor="#000"/>
 
-                            <!-- 下線 -->
                             <BoxView Grid.Row="7" Grid.ColumnSpan="3"
                                      HeightRequest="2"
-                                     BackgroundColor="#bbb" />
-
+                                     BackgroundColor="#bbb"/>
 
                             <!-- 住所 -->
                             <Label Grid.Row="8" Grid.Column="0"
-                                   Text="住所"
+                                   Text="{Binding Reg_Address}"
                                    FontSize="22"
                                    FontAttributes="Bold"
                                    TextColor="#333"
@@ -125,21 +119,23 @@
                                    Text=" ： "
                                    FontSize="22"
                                    FontAttributes="Bold"
-                                   TextColor="#333" />
+                                   TextColor="#333"/>
 
                             <Label Grid.Row="8" Grid.Column="2"
                                    Text="{Binding Address}"
                                    FontSize="26"
-                                   TextColor="#000" />
+                                   TextColor="#000"/>
 
-                            <!-- 下線 -->
                             <BoxView Grid.Row="9" Grid.ColumnSpan="3"
                                      HeightRequest="2"
-                                     BackgroundColor="#bbb" />
+                                     BackgroundColor="#bbb"/>
+
                         </Grid>
                     </VerticalStackLayout>
                 </ScrollView>
+
             </Grid>
+
         </base:BasePage.InnerContent>
     </base:BasePage>
 </ContentPage>
